# uv-constraints-check

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  README_ja-JP.md  pyproject.toml
src/uv_constraints_check/: __about__.py  cli.py
tests/: __init__.py  test_cli.py
